tests/Unit/Mocks/invalid-project-dir/config/invalid.routes.php
<?php

return [
    'bad_route',
];
